Add link on top title

--- a/template.html
+++ b/template.html
@@ -19,6 +19,10 @@ h1 {
   font-weight: normal;
   font-size: 200%;
 }
+h1>a {
+  text-decoration: none;
+  color: inherit;
+}
 a {
   color: gray;
 }
@@ -134,7 +138,7 @@ footer>.labels {
 </head>
 <body>
   <header>
-    <h1>##SITE_TITLE##</h1>
+    <h1><a href='##BLOG_TOPURL##'>##SITE_TITLE##</a></h1>
     <div class='desc'>##SITE_DESC##</div>
   </header>
 ##BEGIN_TOPPAGE##
