--- a/template.html
+++ b/template.html
@@ -138,7 +138,7 @@ footer>.labels {
 </head>
 <body>
   <header>
-    <h1><a href='##BLOG_TOPURL##'>##SITE_TITLE##</a></h1>
+    <h1><a href='/'>##SITE_TITLE##</a></h1>
     <div class='desc'>##SITE_DESC##</div>
   </header>
 ##BEGIN_TOPPAGE##
