--- a/template.html
+++ b/template.html
@@ -42,7 +42,7 @@ a {
 img {
   border: none;
 }
-main {
+main, footer {
   max-width: 1020px;
   margin: 0 auto;
 }
@@ -54,14 +54,32 @@ main {
 /* エントリー専用デザイン */
 .entry>article {
   float: left;
-  width: 600px;
-  padding: 40px;
-  box-shadow: 0px 0px 10px gray;
   background-color: rgb(255,255,255);
 }
 .entry>nav {
   float: right;
-  width: 320px;
+}
+@media screen and (min-width: 680px){
+  .entry>article {
+    width: 60%;
+    padding: 3%;
+    box-shadow: 0px 0px 10px gray;
+  }
+  .entry>nav {
+    width: 32%;
+    margin-left: 2%;
+  }
+}
+@media screen and (max-width: 679px){
+  .entry>article {
+    width: 100%;
+    padding: 0%;
+    box-shadow: 0px 0px 0px rgb(255,255,255);
+  }
+  .entry>nav {
+    width: 100%;
+    margin-left: 0%;
+  }
 }
 .entry:after { /* clearfix */
   display: block;
@@ -209,9 +227,11 @@ footer {
   font-size: 80%;
   text-align: center;
   padding-bottom: 20px;
+  padding-top: 20px;
+  margin-top: 20px;
+  border-top: 1px solid rgb(224,39,44);
 }
 footer>.labels {
-  margin-top: 20px;
   margin-bottom: 5px;
 }
 </style>
