fix article style

--- a/template.html
+++ b/template.html
@@ -62,8 +62,9 @@ main, footer {
 @media screen and (min-width: 680px){
   .entry>article {
     width: 60%;
-    padding: 3%;
-    box-shadow: 0px 0px 10px gray;
+    padding: 2.5%;
+    border: 1px solid rgb(230,230,230);
+    border-radius: 20px;
   }
   .entry>nav {
     width: 32%;
@@ -74,7 +75,8 @@ main, footer {
   .entry>article {
     width: 100%;
     padding: 0%;
-    box-shadow: 0px 0px 0px rgb(255,255,255);
+    border-color: 1px solid rgb(255,255,255);
+    border-radius: 0px;
   }
   .entry>nav {
     width: 100%;
