remove script tag

--- a/template.html
+++ b/template.html
@@ -185,6 +185,7 @@ nav>.entries>ul>ul, nav>.entries>ul>ul>li {
   margin-left: 5px;
   margin-right: 5px;
   background-size: cover;
+  background-position: center center;
 }
 @media screen and (min-width: 680px){
   .toppage>nav>.entries>ul>ul>li {
@@ -226,10 +227,11 @@ nav>.entries>ul>ul, nav>.entries>ul>ul>li {
 .entry>nav>.entries>ul>ul>li>a>.sumbnail {
   display: block;
   float:left;
-  width: 64px;
-  height: 64px;
+  width: 40%;
+  height: 80px;
   margin-right: 5px;
   background-size: cover;
+  background-position: center center;
 }
 .entry>nav>.entries>ul>ul>li:after { /* clearfix */
   display: block;
@@ -291,10 +293,5 @@ footer>.labels {
     <div class='labels'>##BLOG_FOOTER##</div>
     <div class='copyright'>##BLOG_COPYRIGHT##</div>
   </footer>
-<script>
-(function(){
-
-})();
-</script>
 </body>
 </html>
