--- a/template.html
+++ b/template.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset='utf-8' />
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<!-- Twitter対応 -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@_sakurashiki">
+<meta name="twitter:creator" content="@_sakurashiki">
+<meta name="twitter:title" content="##BLOG_TITLE##">
+<meta name="twitter:description" content="##SITE_DESC##">
+<meta name="twitter:image" content="##PAGE_SUMBNAIL##">
 <title>##BLOG_TITLE##</title>
 <style>
 /* 全体共通 */
