add facebook ogp configuration

--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang='ja'>
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 <meta charset='utf-8' />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <!-- Twitter対応 -->
@@ -10,6 +10,11 @@
 <meta name="twitter:title" content="##BLOG_TITLE##">
 <meta name="twitter:description" content="##SITE_DESC##">
 <meta name="twitter:image" content="##PAGE_SUMBNAIL##">
+<!-- Facebook対応 -->
+<meta property="og:title" content="##BLOG_TITLE##" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="##ENTRY_URL##" />
+<meta property="og:image" content="##PAGE_SUMBNAIL##" />
 <title>##BLOG_TITLE##</title>
 <style>
 /* 全体共通 */
