--- a/template.html
+++ b/template.html
@@ -250,6 +250,9 @@ nav>.entries>ul>ul, nav>.entries>ul>ul>li {
   content: '';
   clear: both;
 }
+.banner_link>img {
+  width: 100%;
+}
 footer {
   font-size: 80%;
   text-align: center;
@@ -289,6 +292,10 @@ footer>.labels {
         ##PAGE_CONTENT##
       </section>
       <section class='content_footer'>
+        <div class='banner'>
+          <a class='banner_link' href='https://booth.pm/?utm_source=blog&utm_medium=banner&utm_campaign=boothmaniax
+' target='_blank'><img src='img/banner.jpg'></a>
+        </div>
         <div class='social'>
           <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
