fix social button position

--- a/template.html
+++ b/template.html
@@ -250,6 +250,9 @@ nav>.entries>ul>ul, nav>.entries>ul>ul>li {
   content: '';
   clear: both;
 }
+.social {
+  height: 40px;
+}
 .banner_link>img {
   width: 100%;
 }
