--- a/template.html
+++ b/template.html
@@ -15,13 +15,33 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="##ENTRY_URL##" />
 <meta property="og:image" content="##PAGE_SUMBNAIL##" />
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/img/ico/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="/img/ico/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/img/ico/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="/img/ico/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/img/ico/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/img/ico/manifest.json">
+<link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/img/ico/mstile-144x144.png">
+<meta name="theme-color" content="#ffffff">
 <title>##BLOG_TITLE##</title>
 <style>
 /* 全体共通 */
 body {
   margin: 0;
   font-family: 'Helvetica', 'Arial', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', sans-serif;
-  background-color:  rgb(250,250,250)
+  background-color:  rgb(250,250,250);
+  color: rgb(80,80,80);
 }
 @media screen and (min-width: 680px){
   body {
@@ -123,8 +143,7 @@ h2 {
 h3 {
   border-bottom: 1px solid rgb(224,39,44);
   border-left: 5px solid rgb(224,39,44);
-  color: #000;
-  text-shadow: 1px 1px #FFF;
+  color: inherit;
   padding-top: 5px;
   padding-bottom: 10px;
   padding-left: 10px;
