fix campain url

--- a/template.html
+++ b/template.html
@@ -185,6 +185,12 @@ nav>.entries>ul>ul, nav>.entries>ul>ul>li {
   padding: 0;
   margin: 0;
 }
+.nav_title {
+  font-size: 80%;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 /* トップページ上のナビゲーション */
 .toppage>nav>.entries>ul>li {
   border-top: 1px dotted rgb(224,39,44);
@@ -328,7 +334,7 @@ footer>.labels {
           }(document, 'script', 'facebook-jssdk'));</script>
         </div>
         <div class='banner'>
-          <a class='banner_link' href='https://booth.pm/?utm_source=blog&utm_medium=banner&utm_campaign=boothmaniax
+          <a class='banner_link' href='https://booth.pm/start?utm_source=blog&utm_medium=banner&utm_campaign=boothmaniax
 ' target='_blank'><img src='img/banner.jpg'></a>
         </div>
       </section>
@@ -338,6 +344,7 @@ footer>.labels {
         ##PAGE_NAV##
       </section>
       <section class='intro'>
+        <div class='nav_title'>このブログのライター</div>
         ##BLOG_INTRO##
       </section>
     </nav>
