Add OG for Google bot

--- a/template.html
+++ b/template.html
@@ -10,11 +10,13 @@
 <meta name="twitter:title" content="##BLOG_TITLE##">
 <meta name="twitter:description" content="##SITE_DESC##">
 <meta name="twitter:image" content="##PAGE_SUMBNAIL##">
-<!-- Facebook対応 -->
+<!-- Facebook/Google対応 -->
 <meta property="og:title" content="##BLOG_TITLE##" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="##ENTRY_URL##" />
 <meta property="og:image" content="##PAGE_SUMBNAIL##" />
+<meta property="og:url" content="##BLOG_TOPURL##"/>
+<meta property="og:description" content="##SITE_DESC##" />
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-touch-icon-60x60.png">
