--- a/template.html
+++ b/template.html
@@ -320,6 +320,7 @@ footer>.labels {
       </section>
       <section class='content_footer'>
         <div class='social'>
+          <a href="http://b.hatena.ne.jp/entry/##ENTRY_URL##" class="hatena-bookmark-button" data-hatena-bookmark-title="##PAGE_TITLE##" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
           <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
           <div class="fb-like" data-href="##ENTRY_URL##" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
