Fix blog description bug.

--- a/template.html
+++ b/template.html
@@ -308,7 +308,7 @@ footer>.labels {
 <body>
   <header>
     <h1><a href='/'>##SITE_TITLE##</a></h1>
-    <div class='desc'>##SITE_DESC##</div>
+    <div class='desc'>##BLOG_DESC##</div>
   </header>
 ##BEGIN_TOPPAGE##
   <main class='toppage'>
